--- a/Transmission/Transmission.csproj
+++ b/Transmission/Transmission.csproj
@@ -306,8 +306,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Cell.cs" />
-    <Compile Include="Assets\Game.cs" />
+    <Compile Include="Assets\Scripts\Cell.cs" />
+    <Compile Include="Assets\Scripts\CellStateController.cs" />
+    <Compile Include="Assets\Scripts\CreateAndWinLose.cs" />
+    <Compile Include="Assets\Scripts\Game.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
